Fix bad string comparison preventing 'none' and 'initial' values of 'counter-increment' and 'counter-reset' from being parsed correctly.  b=379555  r+sr=dbaron  Patch by Daniel Holbert <dholbert@mozilla.com>.